fixed cursor blurring

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
   background-color: #151819;
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
   margin: 0;
 }
 
@@ -15,10 +14,9 @@ input:focus{
   outline: none;
 }
 
-
-.search {
+#search {
   background-color: #151819;
-  color: cyan;
+  color: cadetblue;
   border: 0;
   text-align: center;
   border-radius: 50px;
